k8s/6-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
  namespace: bankapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
        - name: bankapp
          image: rohitxten/3-tier-bankapp:latest
          ports:
            - containerPort: 8080 
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080   
            initialDelaySeconds: 100
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080  
            initialDelaySeconds: 80
            periodSeconds: 5
