k8s/5-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bankapp
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  type: ClusterIP
