k8s/7-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bankapp
spec:
  selector:
    app: bankapp
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
